<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_customer_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_customer_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore" />
    <item
        android:id="@+id/nav_customer_enquiries"
        android:icon="@drawable/ic_enquiries"
        android:title="@string/nav_enquiries" />
    <item
        android:id="@+id/nav_customer_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_customer_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
