<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_artisan_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_artisan_products"
        android:icon="@drawable/ic_products"
        android:title="@string/nav_products" />

    <item
        android:id="@+id/nav_artisan_enquiries"
        android:icon="@drawable/ic_enquiries"
        android:title="@string/nav_enquiries" />

    <item
        android:id="@+id/nav_artisan_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/nav_artisan_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
